Clean up and maven install